# project8_group2

./: README.md  gen_mask.py  run_filters.sh  turtlebot_connect.sh
config/: keepout_,mask.yaml  keepout_mask.pgm  keepout_mask.yaml  nav2_params.yaml  speed_mask.pgm  speed_mask.yaml
patrol/: package.xml  patrol_node.py  setup.py
src/og/: package.xml  setup.cfg  setup.py
src/og/og/: og_node.py
src/patrol/: setup.py
src/patrol/patrol/: patrol_node.py  test.py
src/zones/: package.xml  setup.cfg  setup.py
